@@ -6,36 +6,26 @@
  */
 package org.elasticsearch.xpack.enrich;
 
-import org.apache.lucene.search.TotalHits;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.search.SearchRequest;
-import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.action.search.ShardSearchFailure;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.index.query.MatchQueryBuilder;
-import org.elasticsearch.search.SearchHit;
-import org.elasticsearch.search.SearchHits;
-import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
-import org.elasticsearch.search.internal.InternalSearchResponse;
-import org.elasticsearch.search.profile.SearchProfileResults;
-import org.elasticsearch.search.suggest.Suggest;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xpack.core.enrich.EnrichPolicy;
 
-import java.util.Collections;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.Matchers.sameInstance;
 
 public class EnrichCacheTests extends ESTestCase {
 
@@ -74,34 +64,13 @@ public class EnrichCacheTests extends ESTestCase {
             new SearchSourceBuilder().query(new MatchQueryBuilder("match_field", "2"))
         );
         // Emulated search response (content doesn't matter, since it isn't used, it just a cache entry)
-        var searchResponse = new SearchResponse(
-            new InternalSearchResponse(
-                new SearchHits(new SearchHit[0], new TotalHits(0L, TotalHits.Relation.EQUAL_TO), 0.0f),
-                InternalAggregations.EMPTY,
-                new Suggest(Collections.emptyList()),
-                new SearchProfileResults(Collections.emptyMap()),
-                false,
-                false,
-                1
-            ),
-            "",
-            1,
-            1,
-            0,
-            0,
-            ShardSearchFailure.EMPTY_ARRAY,
-            SearchResponse.Clusters.EMPTY
-        );
+        List<Map<?, ?>> searchResponse = List.of(Map.of("test", "entry"));
 
-        var enrichCache = new EnrichCache(3) {
-            void warmCache(SearchRequest searchRequest, SearchResponse entry) {
-                this.cache.put(toKey(searchRequest), CompletableFuture.completedFuture(entry));
-            }
-        };
+        EnrichCache enrichCache = new EnrichCache(3);
         enrichCache.setMetadata(metadata);
-        enrichCache.warmCache(searchRequest1, searchResponse);
-        enrichCache.warmCache(searchRequest2, searchResponse);
-        enrichCache.warmCache(searchRequest3, searchResponse);
+        enrichCache.put(searchRequest1, searchResponse);
+        enrichCache.put(searchRequest2, searchResponse);
+        enrichCache.put(searchRequest3, searchResponse);
         var cacheStats = enrichCache.getStats("_id");
         assertThat(cacheStats.getCount(), equalTo(3L));
         assertThat(cacheStats.getHits(), equalTo(0L));
@@ -118,7 +87,7 @@ public class EnrichCacheTests extends ESTestCase {
         assertThat(cacheStats.getMisses(), equalTo(1L));
         assertThat(cacheStats.getEvictions(), equalTo(0L));
 
-        enrichCache.warmCache(searchRequest4, searchResponse);
+        enrichCache.put(searchRequest4, searchResponse);
         cacheStats = enrichCache.getStats("_id");
         assertThat(cacheStats.getCount(), equalTo(3L));
         assertThat(cacheStats.getHits(), equalTo(3L));
@@ -151,9 +120,9 @@ public class EnrichCacheTests extends ESTestCase {
         assertThat(enrichCache.get(searchRequest4), nullValue());
 
         // Add new entries using new enrich index name as key
-        enrichCache.warmCache(searchRequest1, searchResponse);
-        enrichCache.warmCache(searchRequest2, searchResponse);
-        enrichCache.warmCache(searchRequest3, searchResponse);
+        enrichCache.put(searchRequest1, searchResponse);
+        enrichCache.put(searchRequest2, searchResponse);
+        enrichCache.put(searchRequest3, searchResponse);
 
         // Entries can now be served:
         assertThat(enrichCache.get(searchRequest1), notNullValue());
@@ -167,38 +136,51 @@ public class EnrichCacheTests extends ESTestCase {
         assertThat(cacheStats.getEvictions(), equalTo(4L));
     }
 
-    public void testNonblocking() throws ExecutionException {
-        var enrichCache = new EnrichCache(3);
-        var metadata = Metadata.builder()
-            .put(
-                IndexMetadata.builder(EnrichPolicy.getBaseName("policy1") + "-1")
-                    .settings(settings(Version.CURRENT))
-                    .numberOfShards(1)
-                    .numberOfReplicas(0)
-                    .putAlias(AliasMetadata.builder(EnrichPolicy.getBaseName("policy1")).build())
-            )
-            .build();
-        enrichCache.setMetadata(metadata);
-
-        var key = new SearchRequest(EnrichPolicy.getBaseName("policy1")).source(
-            new SearchSourceBuilder().query(new MatchQueryBuilder("match_field", "1"))
-        );
-
-        CompletableFuture<Boolean> check = new CompletableFuture<>();
-        ExecutorService executor = Executors.newSingleThreadExecutor();
-        executor.submit(() -> {
-            enrichCache.resolveOrDispatchSearch(key, (req, handler) -> {/* take forever to compute */}, (value, exception) -> {});
-            check.complete(true);
-        });
-
-        try {
-            check.get(1, TimeUnit.SECONDS);
-        } catch (InterruptedException e) {
-            fail("interrupted");
-        } catch (TimeoutException e) {
-            fail("method blocked for a second");
+    public void testDeepCopy() {
+        Map<String, Object> original = new HashMap<>();
+        {
+            original.put("foo", "bar");
+            original.put("int", 123);
+            original.put("double", 123.0D);
+            Map<String, Object> innerObject = new HashMap<>();
+            innerObject.put("buzz", "hello world");
+            innerObject.put("foo_null", null);
+            innerObject.put("1", "bar");
+            innerObject.put("long", 123L);
+            List<String> innerInnerList = new ArrayList<>();
+            innerInnerList.add("item1");
+            List<Object> innerList = new ArrayList<>();
+            innerList.add(innerInnerList);
+            innerObject.put("list", innerList);
+            original.put("fizz", innerObject);
+            List<Map<String, Object>> list = new ArrayList<>();
+            Map<String, Object> value = new HashMap<>();
+            value.put("field", "value");
+            list.add(value);
+            list.add(null);
+            original.put("list", list);
+            List<String> list2 = new ArrayList<>();
+            list2.add("foo");
+            list2.add("bar");
+            list2.add("baz");
+            original.put("list2", list2);
         }
 
-        executor.shutdownNow();
+        Map<?, ?> result = EnrichCache.deepCopy(original, false);
+        assertThat(result, equalTo(original));
+        assertThat(result, not(sameInstance(original)));
+
+        result = EnrichCache.deepCopy(original, true);
+        assertThat(result, equalTo(original));
+        assertThat(result, not(sameInstance(original)));
+        Map<?, ?> innerMap = (Map<?, ?>) result.get("fizz");
+        expectThrows(UnsupportedOperationException.class, () -> innerMap.remove("x"));
+        List<?> innerList = (List<?>) result.get("list");
+        expectThrows(UnsupportedOperationException.class, () -> innerList.remove(0));
+
+        original.put("embedded_object", new byte[] { 1, 2, 3 });
+        result = EnrichCache.deepCopy(original, false);
+        assertArrayEquals(new byte[] { 1, 2, 3 }, (byte[]) result.get("embedded_object"));
     }
+
 }
